src/test/deca/syntax/valid/sansObjet/1_conversionFloat.deca
// Description:
//   Conversion en float
//
// Resultats: syntax valid
//
//
// Historique:
//    cree le 13/01/2020

{
      float y;
      int x = 5;
      y = (float) (x);

}
